z-index fixed

--- a/app_hubstar/app/styles/profile-css.css
+++ b/app_hubstar/app/styles/profile-css.css
@@ -445,7 +445,7 @@ input{
 div#appfeedback{
 
     position:fixed;
-    z-index: 0;
+    z-index: 100;
     text-align: center;
     top: -80px;
     width: 100%;
